@@ -29,7 +29,7 @@ class Xconvgemm: public Routine {
   // Constructor
   enum class ConvGemmMethod {kWithIm2Col, kSingleKernel};
   Xconvgemm(Queue &queue, EventPointer event, const std::string &name = "CONVGEMM",
-            const ConvGemmMethod method = ConvGemmMethod::kSingleKernel);
+            const ConvGemmMethod method = ConvGemmMethod::kWithIm2Col);
 
   // Templated-precision implementation of the routine
   void DoConvgemm(const size_t channels, const size_t height, const size_t width,
